update README and Docker configuration for manifest URL scraper and server

--- a/compose.yaml
+++ b/compose.yaml
@@ -7,3 +7,12 @@ services:
       dockerfile: scraper.Dockerfile
     volumes:
       - ./scraped:/app/scraped
+
+  server:
+    build:
+      context: .
+      dockerfile: server.Dockerfile
+    volumes:
+      - ./scraped:/usr/local/apache2/htdocs/scraped
+    ports:
+      - "8080:80"
