--- a/package.json
+++ b/package.json
@@ -3,9 +3,16 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "scraper": "node scraper.js"
+    "scraper": "node scraper.js",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "playwright": "^1.55.1"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "@jest/globals": "^29.7.0"
   }
 }
