refactor: update Dockerfile to use run-interval.js and clean npm cache

--- a/src/scraper/Dockerfile
+++ b/src/scraper/Dockerfile
@@ -5,7 +5,9 @@ WORKDIR /app
 RUN npx -y playwright@1.55.1 install --with-deps firefox
 
 COPY package*.json ./
-RUN npm ci --omit=dev --audit=false --fund=false
+RUN npm ci --omit=dev --audit=false --fund=false && npm cache clean --force
 
-COPY scraper.js ./
-CMD ["node", "scraper.js"]
+COPY scraper.js run-interval.js ./
+
+USER node
+CMD ["node", "run-interval.js"]
