refactor: switch from Firefox to Chromium in scraper and update Dockerfile to use slim image

--- a/src/scraper/Dockerfile
+++ b/src/scraper/Dockerfile
@@ -1,11 +1,11 @@
-FROM node:24
-
+FROM node:24-slim
 WORKDIR /app
-
-RUN npx -y playwright@1.55.1 install --with-deps firefox
 
 COPY package*.json ./
 RUN npm ci --omit=dev --audit=false --fund=false && npm cache clean --force
+
+ENV PLAYWRIGHT_BROWSERS_PATH=0
+RUN npx -y playwright@1.55.1 install --with-deps --only-shell chromium
 
 COPY scraper.js run-interval.js ./
 
