refactor: update scraper to use cron scheduling, replace run-interval.js with scheduler.js and task.js

--- a/src/scraper/Dockerfile
+++ b/src/scraper/Dockerfile
@@ -1,12 +1,12 @@
 FROM node:24-slim
 WORKDIR /app
 
-COPY package*.json ./
+COPY package.json package-lock.json ./
 RUN npm ci --omit=dev --audit=false --fund=false && npm cache clean --force
 
 ENV PLAYWRIGHT_BROWSERS_PATH=0
 RUN npx -y playwright@1.55.1 install --with-deps --only-shell chromium
 
-COPY scraper.js run-interval.js ./
+COPY scraper.js task.js scheduler.js ./
 
-CMD ["node", "run-interval.js"]
+CMD ["node", "scheduler.js"]
