refactor: update scraper service to use environment variables for cron schedule and timezone

--- a/compose.yaml
+++ b/compose.yaml
@@ -6,6 +6,9 @@ services:
       context: ./src/scraper
     volumes:
       - ./scraped:/app/scraped
+    environment:
+      - CRON_SCHEDULE=* * * * *
+      - TZ=Europe/Budapest
 
   player:
     build:
